--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homework",
   "version": "1.0.0",
-  "description": "",
+  "description": "Linked List implemented in JS",
   "main": "index.js",
   "scripts": {
     "test": "testrun"
