--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Linked List implemented in JS",
   "main": "index.js",
   "scripts": {
-    "test": "testrun"
+    "test": "mocha test/"
   },
   "repository": {
     "type": "git",
