change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homework",
+  "name": "linked-list-sk",
   "version": "1.0.0",
   "description": "Linked List implemented in JS",
   "main": "index.js",
